<?xml version="1.0" encoding="utf-8"?><!--
     Copyright 2013 Google Inc. All rights reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

	<!-- TODO: organize this a bit -->

	<string name="app_name">Open Food Logger</string>
	<string name="logging">Logging</string>
	<string name="title_activity_navigation">OpenFood</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="playback">Playback</string>

	<string name="title_activity_create_playback">CreatePlaybackActivity</string>
	<string name="title_activity_playback">PlaybackActivity</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="create">Create</string>
	<string name="logs">Logs</string>

	<string name="action_none">No Action</string>
	<string name="action_rest">At Rest</string>
	<string name="action_held">Held</string>
	<string name="action_drink">Drinking</string>

	<string name="log_warn_dialog_title">Currently Logging</string>
	<string name="log_warn_dialog_message">Leaving now will stop the logging.</string>
	<string name="log_warn_dialog_leave">Leave</string>
	<string name="log_warn_dialog_cancel">Cancel</string>

	<string name="rename_dialog_title">Rename %s</string>
	<string name="rename_dialog_rename">Rename</string>
	<string name="raname_dialog_cancel">Cancel</string>
	<string name="rename_dialog_message">Rename the sensor %s, which should be flashing red</string>
</resources>
