<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group
		android:id="@+id/nav_group_navigation"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_logging"
			android:icon="@drawable/ic_bluetooth_searching_black_24dp"
			android:title="@string/logging" />
		<item
			android:id="@+id/nav_logs"
			android:icon="@drawable/ic_library_books_black_24dp"
			android:title="@string/logs" />
		<item
			android:id="@+id/nav_playback"
			android:icon="@drawable/ic_menu_slideshow"
			android:title="@string/playback" />
	</group>
	<group
		android:id="@+id/nav_group_actions"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_action_none"
			android:title="No Action"/>
		<item
			android:id="@+id/nav_action_rest"
			android:title="At Rest"/>
		<item
			android:id="@+id/nav_action_held"
			android:title="Held"/>
		<item
			android:id="@+id/nav_action_drink"
			android:title="Drinking"/>
	</group>
</menu>
